@@ -93,6 +93,13 @@ the hard drive (see <xref linkend="m68k-boot-hd"/>).
 <emphasis>In other words the cdrom is not bootable.</emphasis> 
 Macs do not have a working 2.4.x kernel.
 
+</para><para>
+
+If your hardware uses a 53c9x-based scsi bus, then you may need to
+include the kernel parameter <userinput>mac53c9x=1</userinput>. 
+Hardware with two such scsi buses, such as the Quadra 950, will need 
+<userinput>mac53c9x=2</userinput> instead.
+
 </para>
     </sect3>
 
